--- a/src/Homepage/appsettings.json
+++ b/src/Homepage/appsettings.json
@@ -6,5 +6,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MailSettings": {
+    "MailAddress": "yourmail@example.com",
+    "Password": "yourmailpassword",
+    "Host": "smtp.example.com",
+    "Port": 587,
+    "ToMailAddress": "receiver@example.com",
+    "EnableSsl": true
+  }
 }
