--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,3 +39,15 @@ steps:
     TargetFolder: '$(build.artifactstagingdirectory)'
     CleanTargetFolder: true
     OverWrite: true
+
+- task: FtpUpload@2
+  inputs:
+    credentialsOption: 'serviceEndpoint'
+    serverEndpoint: 'raspi ftp connection'
+    rootDirectory: '$(build.artifactstagingdirectory)'
+    filePatterns: '**'
+    remoteDirectory: '/upload/$(Build.BuildId)/'
+    clean: false
+    cleanContents: true
+    preservePaths: true
+    trustSSL: true
