--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,12 +33,12 @@ steps:
 #    platform: '$(buildPlatform)'
 #    configuration: '$(buildConfiguration)'
 
-- task: CopyFiles@2
-  inputs:
-    Contents: '**'
-    TargetFolder: '$(build.artifactstagingdirectory)'
-    CleanTargetFolder: true
-    OverWrite: true
+#- task: CopyFiles@2
+#  inputs:
+#    Contents: '**'
+#    TargetFolder: '$(build.artifactstagingdirectory)'
+#    CleanTargetFolder: true
+#    OverWrite: true
 
 - task: CopyFilesOverSSH@0
   inputs:
