Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,6 +43,6 @@ steps:
 - task: CopyFilesOverSSH@0
   inputs:
     sshEndpoint: 'raspi'
-    sourceFolder: '$(Agent.BuildDirectory)'
-    contents: '**'
+    sourceFolder: '$(Agent.RootDirectory)'
+    contents: '**/bin/**'
     targetFolder: '/var/www/upload'
