--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,12 +21,19 @@ steps:
   inputs:
     restoreSolution: '$(solution)'
 
-- task: VSBuild@1
+- task: DotNetCoreCLI@2
   inputs:
-    solution: '$(solution)'
-    msbuildArgs: '/p:DeployOnBuild=true /p:SkipInvalidConfigurations=true'
-    platform: '$(buildPlatform)'
-    configuration: '$(buildConfiguration)'
+    command: 'publish'
+    publishWebProjects: true
+    zipAfterPublish: false
+    workingDirectory: '$(System.DefaultWorkingDirectory)'
+
+#- task: VSBuild@1
+#  inputs:
+#    solution: '$(solution)'
+#    msbuildArgs: '/p:DeployOnBuild=true /p:SkipInvalidConfigurations=true'
+#    platform: '$(buildPlatform)'
+#    configuration: '$(buildConfiguration)'
 
 #- task: VSTest@2
 #  inputs:
@@ -43,6 +50,6 @@ steps:
 - task: CopyFilesOverSSH@0
   inputs:
     sshEndpoint: 'raspi'
-    sourceFolder: '$(Agent.RootDirectory)'
+    sourceFolder: '$(System.DefaultWorkingDirectory)'
     contents: '**/bin/**'
     targetFolder: '/var/www/upload'
