--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,28 +29,8 @@ steps:
     zipAfterPublish: false
     workingDirectory: '$(System.DefaultWorkingDirectory)'
 
-#- task: VSBuild@1
-#  inputs:
-#    solution: '$(solution)'
-#    msbuildArgs: '/p:DeployOnBuild=true /p:SkipInvalidConfigurations=true'
-#    platform: '$(buildPlatform)'
-#    configuration: '$(buildConfiguration)'
-
-#- task: VSTest@2
-#  inputs:
-#    platform: '$(buildPlatform)'
-#    configuration: '$(buildConfiguration)'
-
-#- task: CopyFiles@2
-#  inputs:
-#    Contents: '**'
-#    TargetFolder: '$(build.artifactstagingdirectory)'
-#    CleanTargetFolder: true
-#    OverWrite: true
-
-#- task: CopyFilesOverSSH@0
-#  inputs:
-#    sshEndpoint: 'raspi'
-#    sourceFolder: '$(System.DefaultWorkingDirectory)'
-#    contents: '**/bin/**'
-#    targetFolder: '/var/www/upload'
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
