--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ pool:
 variables:
   solution: '**/*.sln'
   buildPlatform: 'Any CPU'
-  buildConfiguration: 'Release'
+  buildConfiguration: '$(configuration)'
 
 steps:
 - task: NuGetToolInstaller@1
@@ -25,13 +25,13 @@ steps:
   inputs:
     command: 'publish'
     publishWebProjects: true
-    arguments: '-c Release -r linux-arm'
+    arguments: '-c $(configuration) -r linux-arm'
     zipAfterPublish: false
     workingDirectory: '$(System.DefaultWorkingDirectory)'
 
 - task: CopyFiles@2
   inputs:
-    Contents: '**\Release\**'
+    Contents: '**\bin\$(configuration)\**'
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
     OverWrite: true
 
