Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,6 +23,11 @@ steps:
     scannerMode: 'MSBuild'
     projectKey: 'Homepage'
     projectName: 'Homepage'
+    extraProperties: |
+      # Additional properties that will be passed to the scanner, 
+      # Put one key=value per line, example:
+      # sonar.exclusions=**/*.bin
+      sonar.exclusions=**/wwwroot/lib/**
 
 - task: NuGetToolInstaller@1
 
