--- a/src/Homepage/appsettings.Development.json
+++ b/src/Homepage/appsettings.Development.json
@@ -5,5 +5,18 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "Serilog": {
+    "MinimumLevel": "Information",
+    "WriteTo": [
+      {
+        "Name": "File",
+        "Args": {
+          "path": ".logs\\log.json",
+          "rollingInterval": "Day"
+        }
+      },
+      { "Name": "Console" }
+    ]
   }
 }
