--- a/src/Homepage/appsettings.Development.json
+++ b/src/Homepage/appsettings.Development.json
@@ -18,5 +18,17 @@
       },
       { "Name": "Console" }
     ]
+  },
+  "AllowedHosts": "*",
+  "MailSettings": {
+    "MailAddress": "sender@domain.com",
+    "Password": "mailPassword",
+    "Host": "smtp.example.com",
+    "Port": 587,
+    "ToMailAddress": "receiver@mail.com",
+    "EnableSsl": true
+  },
+  "BuildProperties": {
+    "BuildId": "123456"
   }
 }
