Added recaptcha to contact page

--- a/src/Homepage/appsettings.Development.json
+++ b/src/Homepage/appsettings.Development.json
@@ -28,6 +28,11 @@
     "ToMailAddress": "receiver@mail.com",
     "EnableSsl": true
   },
+  "RecaptchaSettings": {
+    "Enabled": false,
+    "SiteKey": "YOURSITEKEY",
+    "SecretKey": "YOURSECRETKEY"
+  },
   "BuildProperties": {
     "BuildId": "123456"
   }
