Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,7 +53,7 @@ steps:
 
 - task: CopyFiles@2
   inputs:
-    Contents: '**\$(runtime)\**'
+    Contents: '**\bin\**\$(runtime)\**'
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
     OverWrite: true
 
